docs/0.2.0/en/components/presentation.mdx
---
title: PresentationEditor
description: Presentation content, slideshow events, geometry kernel, and host extension points.
---

# PresentationEditor

`PresentationEditor` uses a typed scene graph for slides and mounts TipTap only
while a text box is being edited.

## Properties

| Property | Type | Required | Default | Description |
| --- | --- | --- | --- | --- |
| `content` | `PresentationContent` | Yes | — | Controlled presentation content. |
| `onChange` | `(content: PresentationContent) => void` | Yes | — | Emits the complete next presentation. |
| `preview` | `boolean` | No | `false` | Read-only presentation surface. |
| `saveStatus` | `string` | No | `'Saved automatically'` | Host-owned save status. |
| `fileActions` | `readonly OfficeFileAction[]` | No | `[]` | Host file actions. |
| `kernelWasmUrl` | `string` | No | packaged kernel | Snapping, alignment, and geometry-kernel URL. |
| `onAgentRequest` | `(request: EditorAgentRequest) => void \| Promise<void>` | No | — | Sends slide or object context to the host AI flow. |
| `onStartSlideshow` | `() => void` | No | — | Notifies the host after built-in playback starts. |
| `theme` | `'light' \| 'dark' \| 'system'` | No | `'system'` | Color mode. |

## Content contract

| Field | Type | Description |
| --- | --- | --- |
| `type` | `'presentation'` | Content discriminator. |
| `slides` | `WorkSlide[]` | Slides, elements, notes, comments, and transitions. |
| `width`, `height` | `number` | Presentation canvas dimensions. |
| `masters` | `WorkPresentationMaster[]` | Master backgrounds and elements. |
| `layouts` | `WorkPresentationLayout[]` | Master-linked layouts, placeholders, and inherited elements. |

Use `fileActions`, `onAgentRequest`, and `onStartSlideshow` for stable host
integration. The internal scene-command runtime is not a public extension API.

## Built-in slideshow

The slideshow keeps one shared navigation strip in audience and presenter
modes. Arrow keys and Page Up/Page Down move between slides, Space advances,
Home and End jump to the deck boundaries, and Escape exits playback. These
commands remain active when a slideshow control has focus, while text inputs
and editable content retain their normal keyboard behavior.

Presenter mode shows the current slide, next-slide cue, speaker notes, and a
pauseable timer. The timer belongs to the playback session, so switching
between audience and presenter modes does not reset elapsed time. At phone
widths, the current slide stays full-width, the next-slide preview compacts to
its title cue, notes remain scrollable, and the same navigation strip remains
available.
